--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -12,14 +12,23 @@
   <tbody>
     <% @users.each do |user| %>
       <tr>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= user.username %></td>
+
+        <% if session[:user_id] && User.find(session[:user_id]).username == user.username%>
+          <td><%= link_to 'Show', user %></td>
+          <td><%= link_to 'Edit', edit_user_path(user) %></td>
+          <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <td><%= link_to 'Delete', user_path(user), :method => "delete" %></td>
+        <% end %>   
+
       </tr>
     <% end %>
+
   </tbody>
 </table>
 
 <br>
 
 <%= link_to 'New User', new_user_path %>
+
+
