--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,4 +1,72 @@
-<p id="notice"><%= notice %></p>
+
+<table>
+  <thead>
+    <tr>
+      <th colspan="3">Event Show Page</th>
+    </tr>
+  </thead>
+
+  <tbody>
+    
+      <tr>
+        <td>Event Name: <%= @event.name %></td>
+      </tr>
+        
+      <tr>
+        <td>Event Creator: <%= @user.username %></td>
+      </tr>
+
+      <tr>
+        <td>Event Date: <%= @event.date %></td>
+      </tr>
+
+<tr><td></td></tr>
+<tr><td></td></tr>
+<tr><td></td></tr>
+<tr><td></td></tr>
+
+      <tr>
+
+      <td>Event Attendees:</td>
+
+      </tr>
+
+
+      <% @attendees.each do |attendee| %>
+      <tr>
+        <td><%= attendee.username %></td>
+      <% end %>    
+
+      </tr>
+
+<tr><td></td></tr>
+<tr><td></td></tr>
+<tr><td></td></tr>
+<tr><td></td></tr>
+
+<tr><td><%= form_with model: @event_attending, method: "post" do |form| %>
+
+    <%= form.submit "Attend!!!!!!" %>
+<% end %>
+
+</td></tr>
+      
+   
+
+
+  
+
+
+    
+
+
+
+ 
+
+  </tbody>
+</table>
+
+<br>
 
 <%= link_to 'Edit', edit_event_path(@event) %> |
 <%= link_to 'Back', events_path %>
