--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,10 +6,66 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+
+    <% if false %>
+    <% end %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+
   </head>
 
   <body>
+
+
+  <table>
+  <thead>
+    <tr>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+
+      <tr>
+        <% if session[:user_id]  %>
+
+    <%  user = User.find(session[:user_id]) %>
+    <td><p><%= user.username %> is signed in </p></td>
+    <% if false %>
+    
+    <% end %>
+    <td><%= link_to 'Sign Out', widget_session_path(42), :method => "delete" %></td>
+    
+
+  <% else  %>
+
+    <td><%= link_to "Sign Up", new_user_path %></td>
+    <td><%= link_to "Sign In", new_session_path %></td>
+
+  <% end  %>
+
+  <td>  <%= link_to "Users", users_path %></td>
+
+  <td>  <%= link_to "Events", events_path %></td>
+      </tr>
+
+
+      <tr>
+
+      
+      
+      </tr>
+
+  </tbody>
+</table>
+
+
+  
+
+
+
+
+
     <%= yield %>
   </body>
 </html>
