--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: user, local: true) do |form| %>
+<%= form_for user do |f| %>
   <% if user.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>
@@ -10,8 +10,12 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="actions">
-    <%= form.submit %>
+  
+  <div class="field">
+    <%= f.label :username %><br />
+    <%= f.text_field :username, class: "form-control" %>
+  </div>
+  <div class="action">
+    <%= f.submit %>
   </div>
 <% end %>
