--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,67 @@
 <p id="notice"><%= notice %></p>
 
+<% @past_attended_events = @attended_events.select{ |n| n.date < Time.now}%>
+
+<% @future_attended_events = @attended_events.select{ |n| n.date > Time.now}%>
+
+
+<table>
+  <thead>
+    <tr>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+
+      <tr>
+        <td><strong>Created Events:</strong></td>
+      </tr>
+
+    <% @created_events.each do |event| %>
+      <tr>
+        <td><%= event.name %></td>
+
+      </tr>
+      <% end %>
+
+      <tr><td></td></tr>
+      <tr><td></td></tr>
+      <tr><td></td></tr>
+      <tr><td></td></tr>
+
+
+
+      <tr>
+        <td><strong>Previously Attended Events:</strong></td>
+      </tr>
+
+      <% @past_attended_events.each do |event| %>
+      <tr>
+        <td><%= event.name %></td>
+      </tr>
+    <% end %>
+
+          <tr><td></td></tr>
+      <tr><td></td></tr>
+      <tr><td></td></tr>
+      <tr><td></td></tr>
+
+      <tr>
+        <td><strong>Future Events:</strong></td>
+      </tr>
+
+      <% @future_attended_events.each do |event| %>
+      <tr>
+        <td><%= event.name %></td>
+      </tr>
+    <% end %>
+      
+
+  </tbody>
+</table>
+
+<br>
+
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
